forEnersys/DavePkg/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Big_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Big Event</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.Type</field>
                <operation>equals</operation>
                <value>EMEA Big Event</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Contacts (Big Events)</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <description>Contact Type</description>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Service_Maintenance</fullName>
                    <label>Service/Maintenance</label>
                </value>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                    <isActive>false</isActive>
                    <label>Service</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Former_Employee__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If you learn that this individual has left the company but do not know where they went to, check this box to mark them as former. If you know where they went to, update their account.</inlineHelpText>
        <label>Former Employee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Gender</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Holiday_Mailing_List__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Holiday Mailing List checkbox</description>
        <label>Holiday Mailing List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Contact_Event_Date__c</fullName>
        <inlineHelpText>From Lead conversation</inlineHelpText>
        <label>Initial Contact Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Contact_Event__c</fullName>
        <inlineHelpText>From Lead conversion</inlineHelpText>
        <label>Initial Contact Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Contact_Type__c</fullName>
        <inlineHelpText>Provide additional information about the individuals type if &apos;Other&apos; is selected.</inlineHelpText>
        <label>Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Information__c</fullName>
        <description>Personal Contact Information for relationship building</description>
        <inlineHelpText>Use to track information for a contact to promote relationship building.</inlineHelpText>
        <label>Personal Information</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Contact_Type__c</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_COUNTRY_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact_Type__c</field>
            <operation>equals</operation>
        </filters>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Contact_Type__c</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_COUNTRY_CODE</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <recordTypes>
        <fullName>EnerSys_Contact</fullName>
        <active>true</active>
        <label>EnerSys Contact</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>